--- a/Battle cards.html
+++ b/Battle cards.html
@@ -5,51 +5,32 @@
 
 </head>
 <body>
-<title>Battle Cards | The website</title>
+<title>Moopersss | The website</title>
 
-<h1>Make your own Battle Card!</h1>
+<h1>Make your own Moopersss!</h1>
 
 
 
-<form action="action_page.php">
+<form>
   <label for="name">Name:</label><br>
   <input type="text" id="name" name="name" value=""><br>
-<form action="action_page.php">
   <label for="hp">HP:</label><br>
   <input type="text" id="hp" name="hp" value=""><br>
-<form action="action_page.php">
-  <label for="damage">Damage:</label><br>
-  <input type="text" id="damage" name="damage" value=""><br>
-<form action="action_page.php">
-  <label for="special">Special:</label><br>
-  <input type="text" id="special" name="special" value=""><br>
-<form action="action_page.php">
-  <label for="bonus">Bonus:</label><br>
-  <input type="text" id="bonus" name="bonus" value=""><br>
 <br>
-<form action="/action_page.php">
   <label for="evil">Choose if it is evil or good:</label>
   <select id="evil" name="evil">
     <option value="good">Good</option>
     <option value="evil">Evil</option>
   </select>
 <br>
-<form action="/action_page.php">
-  <label for="Icy">Choose if it is Firy, Icy, or Normal:</label>
-  <select id="Icy" name="Icy">
-    <option value="good">Firy</option>
-    <option value="evil">Icy</option>
-    <option value="evil">Normal</option>
-  </select>
-<br>
-<form action="/action_page.php">
   <label for="gs">Choose kind:</label>
   <select id="gs" name="gs">
     <option value="good">Regular</option>
-    <option value="evil">GS</option>
-    <option value="evil">Helper</option>
+    <option value="evil">Giga</option>
   </select>
-<h1>Draw Battle Card here!<h1>
+
+
+<h1>Draw Moopersss here!<h1>
 <h3><a href="file:///C:/Users/cnlah/Documents/BattleCards.The2ndWebpage.html" target="_blank">Draw Picture</a><h3>
 <br>
 <br>
@@ -58,18 +39,25 @@
 <button imput type="submit" value="Submit">Submit</button>
 
 </form>
-<?php
-	$name = "easton";
-	echo $name;
-	echo "a string";
-?>
-<br>
-<br>
+
 <br>
 
 </body>
 
+<script>
+
+var data = {
+
+name: "cloud",
+Hp: 20,
+Kind: "Giga",
+Type: "Good",
+
+}
+console.log(data)
+
+
+</script>
 
 </html>
-
 
